--- a/js_web_ui/index.html
+++ b/js_web_ui/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This web UI is made more of less following this tutorial: https://youtu.be/1iysNUrI3lw -->
-<!-- Instead of a simple JS sugesstion engine this one relies on djfedos-search python library -->
+<!-- Instead of a simple JS suggestion engine this one relies on djfedos-search python library -->
 <!-- Data is requested and fetched via HTTP from FastAPI -->
 <!-- CSS theme file is taken from https://bootswatch.com (Litera theme) -->
 <html lang="en">
