--- a/js_web_ui/index.html
+++ b/js_web_ui/index.html
@@ -21,7 +21,7 @@
         </h3>
         <!-- The CSS in lines below is according to this video: https://youtu.be/QxMBHi_ZiT8 -->
         <!-- It makes use of Font Awesome search icon and it's too small to create a new CSS file for it-->
-        <div class="form-group" style="position: relative">
+        <div class="form-group" style="position: relative" tabindex="0">
           <input type="text" id="search" class="form-control form-control-lg" placeholder="Enter a prefix here...">
             <div id="icon" style="position: absolute; top: 0; right: 0; height: 55px; width: 55px; line-height: 55px; text-align: center; font-size: 20px; cursor: pointer;">
             <i class="fa-solid fa-magnifying-glass"></i>
