Add a link to GitHub repo

--- a/js_web_ui/index.html
+++ b/js_web_ui/index.html
@@ -30,6 +30,7 @@
         
         <div id="match-list">
       </div>
+      <div>To see the source code of this demo you're welcome to <a href="https://github.com/djfedos/djfedos-search">my GitHub repository</a></div>
       </div>
     </div>
   </div>
