--- a/js_web_ui/index.html
+++ b/js_web_ui/index.html
@@ -30,8 +30,9 @@
         
         <div id="match-list">
       </div>
-      <div>To see the source code of this demo you're welcome to <a href="https://github.com/djfedos/djfedos-search">my GitHub repository</a></div>
+      <div>To see the source code of this demo you're welcome to its <a href="https://github.com/djfedos/djfedos-search">GitHub repository</a></div>
       <div>Documentation <a href="https://djfedos.github.io/djfedos-search">is here</a></div>
+      <div>My website's <a href="https://djfedos.github.io">home page'</a></div>
       </div>
     </div>
   </div>
